--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 <head>
-	<title>Steve Doe: Mapa de Carreira</title>
+	<title>Julia Lima</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -56,7 +56,7 @@
 						<div class="row p-4 justify-content-center justify-content-md-between">
 							<div class="primary-info col-auto">
 								<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Julia Lima</h1>
-								<div class="title mb-3">Estudante de Desenvolvimento Web</div>
+								<div class="title mb-3">Estudante de Desenvolvimento mobile</div>
 								<ul class="list-unstyled">
 									<li class="mb-2">
 										<a class="text-link" href="#">
@@ -68,15 +68,15 @@
 							</div>
 							<div class="secondary-info col-auto mt-2">
 								<ul class="resume-social list-unstyled">
-									<li class="mb-3"><a class="text-link" href="#">
+									<li class="mb-3"><a class="text-link" href="https://www.linkedin.com/in/julia-barbosa-0a3213298/">
 											<span class="fa-container text-center me-2">
 												<i
-													class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/stevedoe</a>
+													class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/julia-barbosa</a>
 									</li>
 									<li class="mb-3">
-										<a class="text-link" href="#">
+										<a class="text-link" href="https://github.com/JuliaLBarbosa">
 											<span class="fa-container text-center me-2">
-												<i class="fab fa-github-alt fa-fw"></i></span>github.com/username
+												<i class="fab fa-github-alt fa-fw"></i></span>github.com/JuliaLBarbosa
 										</a>
 									</li>
 
@@ -91,13 +91,11 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Prazer em Conhecer</h2>
 					<div class="resume-section-content">
-						<p class="mb-0"> Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et
-							magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-							pellentesque eu. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-							ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient
-							montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
-							quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec,
-							vulputate eget. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+						<p class="mb-0">Sou estudante de Desenvolvimento Mobile pelo Instituto PROA, 
+							com foco em criar soluções inovadoras que tornem a tecnologia mais acessível 
+							e presente no cotidiano das pessoas. Busco constantemente me aprofundar na área 
+							de programação, desenvolvendo aplicações que ofereçam uma experiência de uso intuitiva, 
+							funcional e com impacto positivo na vida dos usuários.</p>
 
 						<!-- Altere o link para um PDF do seu Curriculo -->
 						<a class="btn" href="#">Baixar o meu CV</a>
@@ -409,8 +407,6 @@
 									<li class="mb-2 align-middle"><span
 											class="resume-lang-name font-weight-bold">Inglês</span> <small
 											class="text-muted font-weight-normal">(Técnico)</small></li>
-									<li><span class="resume-lang-name font-weight-bold">Espanhol</span> <small
-											class="text-muted font-weight-normal">(Profissional)</small></li>
 								</ul>
 							</div>
 						</section>
