--- a/index.html
+++ b/index.html
@@ -112,45 +112,40 @@
 
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
-												<h3 class="resume-position-title font-weight-bold mb-1">Desenvolvedor
-													Júnior
+												<h3 class="resume-position-title font-weight-bold mb-1">Assistente de Web / Front-end Júnior
 												</h3>
 											</div>
 										</div>
 										<div class="resume-timeline-item-desc">
-											<p>Quero desenvolver as melhores práticas para me tornar
-												um desenvolvedor sênior. Aenean commodo ligula eget dolor. Aenean massa.
-												Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
-												ridiculus mus. Donec uam felis, ultricies nec, pellentesque eu, pretium
-												quis, sem. Donec
-												pede justo, fringilla vel.</p>
+											<p>Ponto de partida para aprender a construção de páginas, 
+												priorizando a responsividade e a organização do código.</p>
 											</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Soft Skills exigidas para essa carreira:
 											</h4>
 											<ul>
-												<li>Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.</li>
-												<li>At vero eos et accusamus et iusto odio dignissimos.</li>
-												<li>Blanditiis praesentium voluptatum deleniti atque corrupti.</li>
-												<li>Maecenas tempus tellus eget.</li>
+												<li>Atenção aos detalhes.</li>
+												<li>Organização e gestão de tempo.</li>
+												<li>Comunicação clara com o time.</li>
+												<li>Vontade de aprender.</li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Roadmap de Aprendizado:</h4>
 											</h4>
 											<ul class="list-inline">
 												<li class="list-inline-item">
-													<span class="badge bg-secondary badge-pill">Angular</span>
+													<span class="badge bg-secondary badge-pill">HTML5/CSS3</span>
 												</li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">Python</span></li>
+														class="badge bg-secondary badge-pill">JavaScript</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">jQuery</span></li>
+														class="badge bg-secondary badge-pill">SEO on-page</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">Webpack</span></li>
+														class="badge bg-secondary badge-pill">WordPress/CMSs</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">HTML/SASS</span></li>
+														class="badge bg-secondary badge-pill">GitHub</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">PostgresSQL</span></li>
+														class="badge bg-secondary badge-pill">Google Analytics</span></li>
 											</ul>
 										</div>
 
@@ -245,18 +240,15 @@
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
 												<h3 class="resume-position-title font-weight-bold mb-1">
-													Arquiteto de Software
+													Especialista em Martech
 												</h3>
 											</div>
 										</div>
 										<div class="resume-timeline-item-desc">
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing
-												elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque
-												penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-												quam felis, ultricies nec. Fusce vulputate eleifend sapien. Vestibulum
-												purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam
-												accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla.
-												Vestibulum.</p>
+											<p>Conhecimento profundo com ferramentas como Google Tag Manager, 
+												HubSpot ou RD Station, além de ciar fluxos automáticos e 
+												personalizações baseadas em comportamento. 
+												Tendo o dominio de dados, scripts e privacidade.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Soft Skills exigidas para essa carreira:
 											</h4>
