--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 									<h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
 									<ul class="list-unstyled mb-4">
 										<li class="mb-2">
-											<div class="resume-skill-name">Angular</div>
+											<div class="resume-skill-name">Figma</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
 													style="width: 98%" aria-valuenow="25" aria-valuemin="0"
@@ -305,7 +305,7 @@
 											<div class="resume-skill-name">JavaScript</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 96%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 74%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
@@ -333,10 +333,10 @@
 									<h4 class="resume-skills-cat font-weight-bold">Backend</h4>
 									<ul class="list-unstyled">
 										<li class="mb-2">
-											<div class="resume-skill-name">Python/Django</div>
+											<div class="resume-skill-name">Kotlin/JavaScript</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 95%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 85%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
@@ -398,7 +398,7 @@
 									</li>
 									<li class="mb-2 align-middle"><span
 											class="resume-lang-name font-weight-bold">Inglês</span> <small
-											class="text-muted font-weight-normal">(Técnico)</small></li>
+											class="text-muted font-weight-normal"></small></li>
 								</ul>
 							</div>
 						</section>
