--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
 			<header class="resume-header pt-4 pt-md-0">
 				<div class="row">
 					<div class="col-block col-md-auto resume-picture-holder text-center text-md-start">
-						<img class="picture" src="assets/images/profile.jpg" alt="">
+						<img class="picture" src="https://media.licdn.com/dms/image/v2/
+						D4D03AQHRGdVwQPUDEQ/profile-displayphoto-shrink_800_800/profile-
+						displayphoto-shrink_800_800/0/1702687306299?e=1755129600&v=beta&t=5c_
+						DLsXUbYKXj9-JQIHHHaoxeajXma_G45IbBpwR1nM" alt="">
 					</div>
 					<div class="col">
 						<div class="row p-4 justify-content-center justify-content-md-between">
@@ -98,7 +101,9 @@
 							funcional e com impacto positivo na vida dos usuários.</p>
 
 						<!-- Altere o link para um PDF do seu Curriculo -->
-						<a class="btn" href="#">Baixar o meu CV</a>
+						<a class="btn" href="https://senacspedu-my.sharepoint.com/:b:/g/personal/
+						julia_lbarbosa3_senacsp_edu_br/
+						EY-efZ99s_9NrbTYgaH_AxsBF_8YXsrSJlW3guidPtqNgQ?e=SmbyW1">Baixar o meu CV</a>
 					</div>
 				</section>
 				<div class="row">
@@ -155,40 +160,36 @@
 
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
-												<h3 class="resume-position-title font-weight-bold mb-1">Senior Software
-													Developer</h3>
+												<h3 class="resume-position-title font-weight-bold mb-1">Desenvolvedor Front-End Jr.</h3>
 											</div>
 										</div>
 										<div class="resume-timeline-item-desc">
-											<p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing
-												elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque
-												penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-												quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec
-												pede justo, fringilla vel.</p>
+											<p>Principal missão de garantir que o design e o conteúdo trabalhem 
+												juntos para gerar engajamento, conversão e boa experiência para o usuário.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Soft Skills exigidas para essa carreira:
 											</h4>
 											<ul>
-												<li>Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.</li>
-												<li>At vero eos et accusamus et iusto odio dignissimos.</li>
-												<li>Blanditiis praesentium voluptatum deleniti atque corrupti.</li>
-												<li>Maecenas tempus tellus eget.</li>
+												<li>Curiosidade por dados e comportamento do usuário.</li>
+												<li>Trabalho em equipe com marketing/design.</li>
+												<li>Mentalidade de melhoria contínua.</li>
+												<li>Flexibilidade para lidar com tarefas variadas.</li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Roadmap de Aprendizado:</h4>
 											<ul class="list-inline">
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">React</span></li>
+														class="badge bg-secondary badge-pill">Tag Manager</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">Redux</span></li>
+														class="badge bg-secondary badge-pill">landing pages</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">Django</span></li>
+														class="badge bg-secondary badge-pill">JavaScript</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">Webpack</span></li>
+														class="badge bg-secondary badge-pill">SEO on-page</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">HTML/SASS</span></li>
+														class="badge bg-secondary badge-pill">HTML5/CSS3</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">MySQL</span></li>
+														class="badge bg-secondary badge-pill">GitHub</span></li>
 											</ul>
 										</div>
 
@@ -198,38 +199,37 @@
 
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
-												<h3 class="resume-position-title font-weight-bold mb-1">Lead Developer
+												<h3 class="resume-position-title font-weight-bold mb-1">Desenvolvedor Front-End Sênior / 
+													Tech Lead de Marketing
 												</h3>
 
 											</div>
 										</div>
 										<div class="resume-timeline-item-desc">
-											<p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing
-												elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque
-												penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-												quam felis, ultricies nec.</p>
+											<p>Especialização em criar soluções otimizadas, escaláveis e voltadas para conversão. 
+												Colaboração com times de marketing, produto e growth, unindo tecnologia, design e estratégia.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Soft Skills exigidas para essa carreira:
 											</h4>
 											<ul>
-												<li>Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.</li>
-												<li>At vero eos et accusamus et iusto odio dignissimos.</li>
-												<li>Blanditiis praesentium voluptatum deleniti atque corrupti.</li>
-												<li>Maecenas tempus tellus eget.</li>
+												<li>Liderança técnica.</li>
+												<li>Visão estratégica.</li>
+												<li>Comunicação assertiva.</li>
+												<li>Mentoria e gestão de pessoas.</li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Roadmap de Aprendizado:</h4>
 											<ul class="list-inline">
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">Django</span></li>
+														class="badge bg-secondary badge-pill">CSS/JS</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">JavaScript</span></li>
+														class="badge bg-secondary badge-pill">HTML5</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">Node.js</span></li>
+														class="badge bg-secondary badge-pill">SASS/PostCSS</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">Require.js</span></li>
+														class="badge bg-secondary badge-pill">A11Y</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">HTML/SASS</span></li>
+														class="badge bg-secondary badge-pill">React</span></li>
 											</ul>
 										</div>
 
@@ -253,22 +253,22 @@
 												Soft Skills exigidas para essa carreira:
 											</h4>
 											<ul>
-												<li>Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.</li>
-												<li>At vero eos et accusamus et iusto odio dignissimos.</li>
-												<li>Blanditiis praesentium voluptatum deleniti atque corrupti.</li>
-												<li>Maecenas tempus tellus eget.</li>
+												<li>Pensamento sistêmico.</li>
+												<li>Capacidade analítica.</li>
+												<li>Organização em projetos complexos.</li>
+												<li>Adaptabilidade a ferramentas novas.</li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Roadmap de Aprendizado:</h4>
 											<ul class="list-inline">
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">Ruby on Rails</span></li>
+														class="badge bg-secondary badge-pill">Javascript</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">jQuery</span></li>
+														class="badge bg-secondary badge-pill">CRM e CDP</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">HTML/LESS</span></li>
+														class="badge bg-secondary badge-pill">Dados</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">MongoDB</span></li>
+														class="badge bg-secondary badge-pill">APIs</span></li>
 											</ul>
 										</div>
 									</article>
