--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 		11. Compartilhar o link do seu site com a professora Adriana através da Planilha. 
 		12. Parabéns! Você concluiu o desafio.
 
-	-->
+	--> 
 
 
 <head>
-	<title>Julia Lima</title>
+	<title>Julia Lima test</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
