--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
-												<h3 class="resume-position-title font-weight-bold mb-1">Assistente de Web / Front-end Júnior
+												<h3 class="resume-position-title font-weight-bold mb-1">Front - end
 												</h3>
 											</div>
 										</div>
@@ -160,7 +160,7 @@
 
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
-												<h3 class="resume-position-title font-weight-bold mb-1">Desenvolvedor Front-End Jr.</h3>
+												<h3 class="resume-position-title font-weight-bold mb-1">Desenvolvedor Front-End Pleno.</h3>
 											</div>
 										</div>
 										<div class="resume-timeline-item-desc">
@@ -199,8 +199,7 @@
 
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
-												<h3 class="resume-position-title font-weight-bold mb-1">Desenvolvedor Front-End Sênior / 
-													Tech Lead de Marketing
+												<h3 class="resume-position-title font-weight-bold mb-1">Desenvolvedor Front-End Sênior
 												</h3>
 
 											</div>
@@ -240,7 +239,7 @@
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
 												<h3 class="resume-position-title font-weight-bold mb-1">
-													Especialista em Martech
+													Tech Lead de Marketing 
 												</h3>
 											</div>
 										</div>
