--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
-												<h3 class="resume-position-title font-weight-bold mb-1">Desenvolvedor Front-End Pleno.</h3>
+												<h3 class="resume-position-title font-weight-bold mb-1">Desenvolvedor Front-End Pleno</h3>
 											</div>
 										</div>
 										<div class="resume-timeline-item-desc">
@@ -304,7 +304,7 @@
 											<div class="resume-skill-name">JavaScript</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 74%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 84%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
