--- a/index.html
+++ b/index.html
@@ -101,9 +101,7 @@
 							funcional e com impacto positivo na vida dos usuários.</p>
 
 						<!-- Altere o link para um PDF do seu Curriculo -->
-						<a class="btn" href="https://senacspedu-my.sharepoint.com/:b:/g/personal/
-						julia_lbarbosa3_senacsp_edu_br/
-						EY-efZ99s_9NrbTYgaH_AxsBF_8YXsrSJlW3guidPtqNgQ?e=SmbyW1">Baixar o meu CV</a>
+						<a class="btn" href="https://drive.google.com/file/d/11HU67LqB_Cx0bK5GHgX96DXrSItAIO9q/view?usp=drivesdk">Baixar o meu CV</a>
 					</div>
 				</section>
 				<div class="row">
