--- a/index.html
+++ b/index.html
@@ -330,15 +330,15 @@
 									<h4 class="resume-skills-cat font-weight-bold">Backend</h4>
 									<ul class="list-unstyled">
 										<li class="mb-2">
-											<div class="resume-skill-name">Kotlin/JavaScript</div>
+											<div class="resume-skill-name">Kotlin</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 85%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 90%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
 										<li class="mb-2">
-											<div class="resume-skill-name">Ruby/Rails</div>
+											<div class="resume-skill-name">MongoDB</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
 													style="width: 92%" aria-valuenow="25" aria-valuemin="0"
@@ -346,7 +346,7 @@
 											</div>
 										</li>
 										<li class="mb-2">
-											<div class="resume-skill-name">PHP</div>
+											<div class="resume-skill-name">API</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
 													style="width: 86%" aria-valuenow="25" aria-valuemin="0"
@@ -354,10 +354,10 @@
 											</div>
 										</li>
 										<li class="mb-2">
-											<div class="resume-skill-name">WordPress/Shopify</div>
+											<div class="resume-skill-name">JavaScript</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 82%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 85%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
@@ -367,15 +367,15 @@
 								<div class="resume-skill-item">
 									<h4 class="resume-skills-cat font-weight-bold">Outras</h4>
 									<ul class="list-inline">
-										<li class="list-inline-item"><span class="badge badge-light">DevOps</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Code Review</span>
-										</li>
 										<li class="list-inline-item"><span class="badge badge-light">Git</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Unit Testing</span>
+										<li class="list-inline-item"><span class="badge badge-light">Github</span>
 										</li>
-										<li class="list-inline-item"><span class="badge badge-light">Wireframing</span>
+										<li class="list-inline-item"><span class="badge badge-light">Android Studio</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">NoSQL</span>
 										</li>
-										<li class="list-inline-item"><span class="badge badge-light">Sketch</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">UI/UX desing</span>
+										</li>
+										<li class="list-inline-item"><span class="badge badge-light">Code Review</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">Balsamiq</span>
 										</li>
 										<li class="list-inline-item"><span class="badge badge-light">WordPress</span>
